--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,12 @@ body {
     font-size: 12pt;
 }
 
+.projectsTitle input {
+    margin: 10px;
+    border: 2px solid #444;
+    border-radius: 5px;
+}
+
 button {
     border: 2px solid #444;
     border-radius: 5px;
